--- a/app/src/main/res/layout/medecing_card_view.xml
+++ b/app/src/main/res/layout/medecing_card_view.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     app:cardCornerRadius="20dp"
-    android:layout_height="200dp"
+    android:layout_margin="15dp"
+        android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp">
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:paddingBottom="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,16 +19,66 @@
          android:fontFamily="@font/poppins_semibold"
          android:text="Amoxicillin - 500 mg"
          android:textColor="#300A61"
+         android:textSize="18sp"
          android:layout_marginTop="15dp"
          android:layout_marginStart="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
-<ImageView
-    android:layout_marginTop="5dp"
-    android:layout_width="match_parent"
-    android:layout_marginHorizontal="15dp"
-    android:layout_height="5dp"
-    app:layout_constraintTop_toBottomOf="@id/med_name"
-     android:src="@drawable/dotted_line"/>
+
+     <ImageView
+         android:id="@+id/imageView2"
+         android:layout_width="match_parent"
+         android:layout_height="5dp"
+         android:layout_marginHorizontal="15dp"
+         android:layout_marginTop="5dp"
+         android:src="@drawable/dotted_line"
+         app:layout_constraintTop_toBottomOf="@id/med_name"
+         tools:layout_editor_absoluteX="15dp" />
+
+     <TextView
+         android:id="@+id/tv_times"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginTop="10dp"
+         android:layout_marginStart="20dp"
+         android:fontFamily="@font/poppins_medium"
+         android:text="3 Times Daily"
+         android:textSize="14sp"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+     <TextView
+         android:id="@+id/tv_taken"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginStart="20dp"
+         android:fontFamily="@font/poppins_medium"
+         android:text="Day 1 of 5"
+         android:textSize="14sp"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toBottomOf="@+id/tv_times" />
+
+     <LinearLayout
+         android:id="@+id/pillContainer"
+         android:layout_width="wrap_content"
+         android:layout_height="20dp"
+         android:layout_marginStart="15dp"
+         app:layout_constraintStart_toStartOf="parent"
+         android:orientation="horizontal"
+         app:layout_constraintTop_toBottomOf="@+id/tv_taken" />
+
+     <androidx.appcompat.widget.AppCompatButton
+         android:background="@drawable/btn_med_bg"
+         android:id="@+id/btn_taken"
+         android:padding="10dp"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:fontFamily="@font/poppins_medium"
+         android:text="Mark as Taken"
+         android:layout_marginEnd="15dp"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
