--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,7 @@
     tools:context=".fragments.HomeFragment">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
+    android:paddingBottom="20dp"
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
@@ -31,7 +32,7 @@ android:paddingTop="40dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/baseline_home_24"
+                android:src="@drawable/baseline_person_24"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white" />
@@ -81,5 +82,20 @@ android:paddingTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/fabAddMedicine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/btn_add_bg"
+        android:fontFamily="@font/poppins_semibold"
+        android:src="@drawable/baseline_add_24"
+        android:text="Add Medecine"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
