--- a/app/src/main/res/layout/medicine_card_view.xml
+++ b/app/src/main/res/layout/medicine_card_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     app:cardCornerRadius="20dp"
+    android:elevation="5dp"
     android:layout_margin="15dp"
         android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp">
@@ -23,6 +24,17 @@
          android:layout_marginTop="15dp"
          android:layout_marginStart="15dp"
          app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toTopOf="parent" />
+
+     <ImageView
+         android:id="@+id/btnDel"
+         app:tint="#EF0B0B"
+         android:layout_marginTop="10dp"
+         android:layout_marginEnd="10dp"
+         android:layout_width="35dp"
+         android:layout_height="35dp"
+         android:src="@drawable/baseline_delete_outline_24"
+         app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
 
      <ImageView
