--- a/app/src/main/res/layout/book_dr_card.xml
+++ b/app/src/main/res/layout/book_dr_card.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginBottom="10dp"
+    app:cardElevation="10dp"
+    app:cardCornerRadius="20dp"
     android:background="@color/white"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp">
 
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
-            android:text="Doctor Name"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    android:paddingBottom="10dp"
+    android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Doctor Name"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_years"
@@ -47,9 +54,9 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:background="@drawable/btn_add_bg"
+        android:id="@+id/btn_book"
         android:fontFamily="@font/poppins_medium"
         android:layout_width="wrap_content"
-        android:id="@+id/btn_book"
         android:layout_height="wrap_content"
         android:text="Book"
         android:layout_marginEnd="5dp"
@@ -57,5 +64,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
