--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -63,7 +63,7 @@
         android:background="@drawable/btn_add_bg"
         android:fontFamily="@font/poppins_semibold"
         android:src="@drawable/baseline_add_24"
-        android:text="Book Appointment"
+        android:text="Looking for a specific doctor?"
         android:layout_marginBottom="50dp"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
