--- a/app/src/main/res/layout/medicine_card_view.xml
+++ b/app/src/main/res/layout/medicine_card_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     app:cardCornerRadius="20dp"
+    android:background="@color/white"
     android:elevation="5dp"
     android:layout_margin="15dp"
         android:layout_height="wrap_content"
@@ -66,6 +67,7 @@
          android:layout_marginStart="20dp"
          android:fontFamily="@font/poppins_medium"
          android:text="Day 1 of 5"
+
          android:textSize="14sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_times" />
@@ -73,6 +75,7 @@
      <LinearLayout
          android:id="@+id/pillContainer"
          android:layout_width="wrap_content"
+
          android:layout_height="20dp"
          android:layout_marginStart="15dp"
          app:layout_constraintStart_toStartOf="parent"
